syntax = "proto3";

package strims.vnic.v1;

option go_package = "github.com/MemeLabs/go-ppspp/pkg/apis/vnic/v1;vnic";
option java_package = "gg.strims.vnic.v1";
option swift_prefix = "SVN";

import "type/certificate.proto";

message PeerInit {
  uint32 protocol_version = 1;
  strims.type.Certificate certificate = 2;
  string node_platform = 3;
  string node_version = 4;
}
